# rpiapptmon

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  telegram.rs
src/hmi/: color.rs  glcdfont.rs  matrix.rs  mod.rs
src/sensors/: adc.rs  ads1115.rs  airq.rs  humidity.rs  light.rs  mod.rs  pir.rs  press_temp.rs
