[package]
name = "rpiapptmon"
version = "0.1.0"
authors = ["greg"]
edition = "2018"

[dependencies]
i2cdev = "0.4.2"
chrono = "0.4.9"
reqwest = "0.9.22"

ads1115 = {git = "https://github.com/wheelin/rs-ads1115"}
lightsensor = {git = "https://github.com/wheelin/rs-photoresistor"}
hts221 = {git = "https://github.com/wheelin/rs-hts221"}
bmp180 = {git = "https://github.com/wheelin/rs-bmp180"}
airqualitysensor = {git = "https://github.com/wheelin/rs-airq"}
adc = {git = "https://github.com/wheelin/rs-adcif"}